--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       />
 
       <button id="show-hide">Show/Hide</button>
-      <button>Log in</button>
+      <button id="login">Log in</button>
     </form>
   </body>
 </html>
